# website

./: .Makefile.swp  .gitattributes  .gitignore  .index.html.swp  .turbocall.text.swp  Cargo.toml  Makefile  README.md  binary-size.html  binary-size.text  build.sh  cargo-timing.html  css.sh  deno-2.html  deno-2.text  deno-internals-1.html  deno-internals-1.text  deno.html  deps.ts  fs-exists-bench.html  fs-exists-bench.text  gen_tufte_diff.sh  import_map.json  include.html  index.html  index.jsx  index.md  index.tex  jsr-ios.html  jsr-ios.text  mail.html  main.css  main.jsx  main.ts  main.tsx  nanossr.ts  npm-startup-time.html  npm-startup-time.text  overrides.css  pm-bench.html  (+16 more)
.github/workflows/: build.yml  deploy.yml
docs/: CNAME  README.md  index.html  package.json  turbocall.html  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
docs/css/: index.css
media/: 1.text  2.text  3.text
scss/: rainbow.scss  reset.scss  style.scss  theme.scss
src/: app_router.rs  lib.rs
src/data/: mod.rs  routes.rs
src/pages/: home.rs  mod.rs  page_template.rs
static/: index.html
typ/: turbocall.typ
